--- a/studio/.env
+++ b/studio/.env
@@ -1,2 +1,2 @@
-SANITY_STUDIO_PROJECT_ID="4q6dxeoe"
-SANITY_STUDIO_DATASET="production"
+SANITY_STUDIO_PROJECT_ID=4q6dxeoe
+SANITY_STUDIO_DATASET=production
