--- a/studio/package.json
+++ b/studio/package.json
@@ -15,17 +15,18 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.23.4",
+    "@sanity/vision": "^4.10.2",
     "easymde": "^2.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sanity": "^3.23.4",
-    "sanity-plugin-markdown": "^4.1.2",
-    "styled-components": "^6.1.8"
+    "sanity": "^4.10.2",
+    "sanity-plugin-markdown": "^6.0.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^4.0.0",
     "@types/react": "^18.0.25",
+    "dotenv": "^17.2.3",
     "eslint": "^8.6.0",
     "prettier": "^3.0.2",
     "typescript": "^5.1.6"
